k8s/admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  namespace: seas
  labels:
    app: admin
spec:
  type: ClusterIP
  selector:
    app: admin
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
