k8s/public-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: public-service
  namespace: seas
  labels:
    app: public
spec:
  type: ClusterIP
  selector:
    app: public
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
